--- a/hackathon_starter/hackathon/templates/hackathon/index.html
+++ b/hackathon_starter/hackathon/templates/hackathon/index.html
@@ -275,15 +275,6 @@ function confirm_order() {
         </div>
     </header>
 
-    <!-- Portfolio Grid Section -->
-    <section id="portfolio">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2>Indica</h2>
-                    <hr style="border-color:black">
-                </div>
-            </div>
 <script>
 function select_nug(name,gram,eighth,quarter,half,oz,qp,hp,url) {
     console.log(qp)
@@ -356,6 +347,15 @@ function reset_menu() {
      $("#item_oz")[0].innerText = "Add to Cart"   
 }
 </script>
+    <!-- Portfolio Grid Section -->
+    <section id="portfolio">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>Indoor</h2>
+                    <hr style="border-color:black">
+                </div>
+            </div>
             <div class="row">
 {% for item in indicas %}
                 <div class="col-sm-4 portfolio-item">
@@ -394,7 +394,7 @@ function reset_menu() {
    <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Hybrid</h2>
+                    <h2>Outdoor</h2>
                     <hr style="border-color:black">
                 </div>
             </div>
@@ -437,7 +437,7 @@ function reset_menu() {
            <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Sativa</h2>
+                    <h2>Greenhouse</h2>
                     <hr style="border-color:black">
                 </div>
             </div>
