--- a/hackathon_starter/hackathon/templates/hackathon/index.html
+++ b/hackathon_starter/hackathon/templates/hackathon/index.html
@@ -115,12 +115,12 @@
                 <input type="text" name="user" id="user" style="display:none">
                 <br />
             <br><hr><br>
-            <h4>Upload your Driver's License</h4>
-                <input type="file" name="file2" class="inputimg" id="driverImg" accept="image/*">
+            <h4>Have your driver's license available for delivery</h4>
+      <!--           <input type="file" name="filethree" class="inputimg" id="nameImg" accept="image/*">
                 <input type="text" name="user" id="user" style="display:none">
                 <br />
                   <hr>
-                <span class="input-group-btn">
+ -->                <span class="input-group-btn">
                         <button  type="submit" class="btn btn-block" onClick="open_shop()">Upload
                         </button>
                   </span>
