--- a/hackathon_starter/hackathon/templates/hackathon/index.html
+++ b/hackathon_starter/hackathon/templates/hackathon/index.html
@@ -394,7 +394,7 @@ function reset_menu() {
                             </div>
                         </div>
                         <center><h2 style="font-size:16px">{{item.name}}</h2></center>
-                        <img src="/static/img/{{item.img}}.jpg" class="img-responsive" alt="" style="width:100%;height:100%">
+                        <img src="/static/img/{{item.img}}.jpg" class="img-responsive" alt="" style="width:400px !important;height:100% !important">
                     </a>
                 </div>
 {% endfor %}
@@ -436,7 +436,7 @@ function reset_menu() {
                             </div>
                         </div>
                         <center><h2 style="font-size:16px">{{item.name}}</h2></center>
-                        <img src="/static/img/{{item.img}}.jpg" class="img-responsive" alt="" style="width:100%;height:200px">
+                        <img src="/static/img/{{item.img}}.jpg" class="img-responsive" alt="" style="width:400px !important;height:200px !important">
                     </a>
                 </div>
 {% endfor %}
@@ -478,7 +478,7 @@ function reset_menu() {
                             </div>
                             </div>
                         </div>                        <center><h2 style="font-size:16px">{{item.name}}</h2></center>
-                        <img src="/static/img/{{item.img}}.jpg" class="img-responsive" alt="" style="width:100%;height:200px">
+                        <img src="/static/img/{{item.img}}.jpg" class="img-responsive" alt="" style="width:400px !important;height:200px !important">
                     </a>
                 </div>
 {% endfor %}
